--- a/report.html
+++ b/report.html
@@ -14265,7 +14265,7 @@ Look at the graph at the bottom left from the cell above(the visualization creat
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer</strong> <br>
-Gradient Boosting can be seen as a group of students in a classroom learning together to have a better understanding on a subject. The elements of the subject are the output data to predict, and for each value of the output data there is a set of information the teacher provide to the students in order to help them find the good answer. This set of information are the features, and each student has to define a response rules based on the information provided by their teacher. The professor interrogate his students one after another, and each student has access to all the information provided by the teacher and the answers of those who have already been interrogated before him. Before setting his rule each student analyse the mistakes made by his predecesor by comparing the previous responses with the real output data. After analysing the mistakes made by its predecesor, the student define his responses rule by trying to not make the same mistakes made by his predecessor (reduce the number of mistakes). This interrogation session where the students define their responses rules can be seen as the training step of the Gradient Boosting. <br></p>
+Gradient Boosting can be seen as a group of students in a classroom learning together to have a better understanding on a subject. The elements of the subject are the output data to predict, and for each value of the output data there is a set of information the teacher provide to the students in order to help them find the right answer. This set of information are the features, and each student has to define a response rules based on the information provided by their teacher. The professor interrogate his students one after another, and each student has access to all the information provided by the teacher and the answers of those who have already been interrogated before him. Before setting his rule each student analyse the mistakes made by his predecesor by comparing the previous responses with the real output data. After analysing the mistakes made by its predecesor, the student define his responses rule by trying to not make the same mistakes made by his predecessor (reduce the number of mistakes). This interrogation session where the students define their responses rules can be seen as the training step of the Gradient Boosting. <br></p>
 <p>After this training session, the Teacher provide to the classroom information on a new element of the subject and ask his classroom to guess the output. To predict the output, each student provide an answer (based on his reponses rule he defined in the training step) and all the answer are combined to provide an unique answer for the classroom: this answer is the prediction. The answer combination rule also has to be define : it can be for instance by voting. <br></p>
 <p>Resource : <a href="https://medium.com/@dalmas.otieno/introduction-to-ensemble-methods-aca988f25fcb">https://medium.com/@dalmas.otieno/introduction-to-ensemble-methods-aca988f25fcb</a></p>
 
@@ -14654,7 +14654,7 @@ Building the model with five features reduced our Accuracy of -1.34% (from 87.08
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[17]:</div>
+<div class="prompt input_prompt">In&nbsp;[18]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="o">!!</span>jupyter nbconvert *.ipynb
@@ -14670,14 +14670,14 @@ Building the model with five features reduced our Accuracy of -1.34% (from 87.08
 
 <div class="output_area">
 
-    <div class="prompt output_prompt">Out[17]:</div>
+    <div class="prompt output_prompt">Out[18]:</div>
 
 
 
 
 <div class="output_text output_subarea output_execute_result">
 <pre>[&#39;[NbConvertApp] Converting notebook finding_donors.ipynb to html&#39;,
- &#39;[NbConvertApp] Writing 503851 bytes to finding_donors.html&#39;]</pre>
+ &#39;[NbConvertApp] Writing 503852 bytes to finding_donors.html&#39;]</pre>
 </div>
 
 </div>
